# chatter

./: Cargo.toml
content/: login.html  register.html  style.css
content/chat/: group.html  home.html
crypto/: Cargo.toml
crypto/src/: lib.rs
db/: Cargo.toml
db/src/: lib.rs
web/: Cargo.toml
web/src/: chat.rs  main.rs  session.rs  user.rs
web/src/chat/: group.rs  message.rs
